# AtomFlow

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  REVIEWERS.md  output_tokens.txt  pyproject.toml  run_inference.sh  setup.py
atomflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
include/: alloc.h  atom_context.h  block_manager.h  kernel.h  operators.h  qkvview.h  view.h  weight_loader.h
include/core/: atom_context.h  config.h  engine.h  model_state.h  qkvview.h  view.h
include/memory/: alloc.h  memory_planner.h  weight_loader.h
include/ops/: kernel.h
include/utils/: profiler.h  utils.h  validator.h
models/: Llama-3.2-3B-Instruct
scripts/: bootstrap.sh
source/: alloc.cpp
src/: main.cu
src/core/: engine.cu
src/experimental/server_arch/: paged_kv_manager.h  server_engine.cu  server_engine.h
src/kernel/: argmax.cu  dequant.cu  helpers.cu  layer.cu  qkv_gemm.cu  residual_add.cu  rmsnorm.cu  rope.cu  swiglu.cu  tiled_attention.cu
src/utils/: profiler.cpp  validator.cpp
tools/: decode_tokens.py  download_weights.py  dump_ground_truth.py  eval_comparison.py  export_atomflow.py  export_llama3.2_fp8.py  fetch_weights.py  gen_ground_truth.py  migrate_lmhead_fp16.py  read_output.py  run_vllm_baseline.py
