# ============================================================================
# pyproject.toml — AtomFlow Python Tooling & CUDA Extension Packaging
#
# Modern PEP 621 packaging with setuptools_scm dynamic versioning,
# CUDA build deps, and scanned tool dependencies.
# ============================================================================

# -- Build System -----------------------------------------------------------
# Declares build-time dependencies required to compile CUDA extensions
# and resolve dynamic versioning via setuptools_scm.
[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools_scm>=6.0",
    "torch>=2.1.0",
]
build-backend = "setuptools.build_meta"

# -- Dynamic Versioning -----------------------------------------------------
# setuptools_scm derives version from git tags/commits for full
# reproducibility (bid compliance).
[tool.setuptools_scm]
write_to = "tools/_version.py"

# -- Project Metadata ---------------------------------------------------------
[project]
name = "atomflow"
dynamic = ["version"]
description = "A linear-attention operator fusion engine optimised for NVIDIA Blackwell (SM120) architecture."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# -- Runtime Dependencies -----------------------------------------------------
# Core install is intentionally dependency-free:
#   - atomflow-eval  uses only the Python standard library
#   - atomflow-fetch uses only urllib.request (stdlib) to pull weights
# Reviewers running the one-click evaluation do NOT need torch, vllm,
# transformers, or any ML framework.
dependencies = []

[project.optional-dependencies]
# [export]  Full weight-export pipeline (HF Llama 3.2 -> AtomFlow .bin).
#           Only needed by project authors regenerating the .bin, not by
#           reviewers evaluating the produced binary.
export = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "transformers>=4.35.0",
    "huggingface-hub>=0.19.0",
]

# [infra]   Operator-fusion / shared-memory research libs (optional).
infra = [
    "nvidia-cutlass-dsl",
    "apache-tvm-ffi",
]

# [dev]     Everything above + lint tooling.
dev = [
    "atomflow[export,infra]",
    "ruff>=0.4.0",
]

# -- CLI Entry Points ---------------------------------------------------------
# Register all critical tools in tools/ as first-class console scripts.
[project.scripts]
atomflow-export    = "tools.export_atomflow:main"
atomflow-dump-gt   = "tools.dump_ground_truth:main"
atomflow-decode    = "tools.decode_tokens:main"
atomflow-eval      = "tools.eval_comparison:main"
atomflow-fetch     = "tools.fetch_weights:main"

# -- Package Discovery --------------------------------------------------------
[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

# -- Code Quality -------------------------------------------------------------
[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"
